--- a/app/src/main/res/layout/single_medication.xml
+++ b/app/src/main/res/layout/single_medication.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraintLayout29"
+    android:id="@+id/openMed"
     android:layout_width="match_parent"
     android:layout_height="120dp"
     android:layout_marginLeft="20dp"
