--- a/app/src/main/res/layout/activity_medication.xml
+++ b/app/src/main/res/layout/activity_medication.xml
@@ -10,14 +10,11 @@
         android:id="@+id/header"
         android:layout_width="0dp"
         android:layout_height="90dp"
-        android:layout_marginBottom="16dp"
         android:background="#1D71B8"
-        app:layout_constraintBottom_toTopOf="@+id/toSpeech"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/txtTitle"
@@ -58,24 +55,6 @@
             app:srcCompat="@drawable/arrow" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ImageButton
-        android:id="@+id/toSpeech"
-        android:layout_width="225dp"
-        android:layout_height="225dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginBottom="51dp"
-        android:background="@drawable/btn_medication"
-        android:scaleType="center"
-        app:layout_constraintBottom_toTopOf="@+id/medName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5"
-        app:srcCompat="@drawable/icon_metro_medkit" />
-
     <TextView
         android:id="@+id/textView17"
         android:layout_width="152dp"
@@ -84,12 +63,11 @@
         android:text="Ler Posologia"
         android:textColor="#FFFFFF"
         android:textSize="24dp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/toSpeech"
-        app:layout_constraintEnd_toEndOf="@+id/toSpeech"
-        app:layout_constraintStart_toStartOf="@+id/toSpeech"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/toSpeech"
-        app:layout_constraintVertical_bias="0.921" />
+        app:layout_constraintVertical_bias="0.934" />
 
     <TextView
         android:id="@+id/medName"
@@ -144,5 +122,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageButton
+        android:id="@+id/toSpeech"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginBottom="65dp"
+        android:background="#FFCB00"
+        app:layout_constraintBottom_toTopOf="@+id/medName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/header"
+        app:srcCompat="@drawable/icon_awesome_pills" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
