--- a/app/src/main/res/layout/single_edit_medication.xml
+++ b/app/src/main/res/layout/single_edit_medication.xml
@@ -26,6 +26,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/txtEditMedDescription"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
