--- a/app/src/main/res/layout/activity_badges_list.xml
+++ b/app/src/main/res/layout/activity_badges_list.xml
@@ -49,7 +49,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/recyclerViewBadge"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
