--- a/app/src/main/res/layout/single_medal.xml
+++ b/app/src/main/res/layout/single_medal.xml
@@ -2,19 +2,19 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="125dp"
+    android:layout_height="200dp">
 
     <ImageView
         android:id="@+id/badgeImage"
         android:layout_width="105dp"
         android:layout_height="107dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="34dp"
-        android:layout_marginEnd="276dp"
-        android:layout_marginRight="276dp"
-        android:layout_marginBottom="9dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="2dp"
         app:layout_constraintBottom_toTopOf="@+id/titleBadge"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,11 +25,11 @@
         android:id="@+id/un_date"
         android:layout_width="79dp"
         android:layout_height="18dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginLeft="42dp"
-        android:layout_marginEnd="290dp"
-        android:layout_marginRight="290dp"
-        android:layout_marginBottom="527dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginLeft="23dp"
+        android:layout_marginEnd="23dp"
+        android:layout_marginRight="23dp"
+        android:layout_marginBottom="19dp"
         android:gravity="center_horizontal"
         android:text="05 de Maio, 2020"
         android:textColor="#ABABAB"
@@ -43,10 +43,10 @@
         android:id="@+id/level"
         android:layout_width="79dp"
         android:layout_height="18dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginLeft="42dp"
-        android:layout_marginEnd="290dp"
-        android:layout_marginRight="290dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginLeft="23dp"
+        android:layout_marginEnd="23dp"
+        android:layout_marginRight="23dp"
         android:gravity="center_horizontal"
         android:text="(Nível 3)"
         android:textColor="#000000"
@@ -60,10 +60,11 @@
         android:id="@+id/titleBadge"
         android:layout_width="79dp"
         android:layout_height="18dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginLeft="42dp"
-        android:layout_marginEnd="290dp"
-        android:layout_marginRight="290dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginLeft="23dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="23dp"
+        android:layout_marginRight="23dp"
         android:gravity="center_horizontal"
         android:text="Assiduidade"
         android:textColor="#000000"
