--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -10,9 +10,9 @@
 
         <Button
             android:id="@+id/takePic"
-            android:layout_width="164dp"
-            android:layout_height="120dp"
-            android:layout_gravity="bottom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|center_vertical"
             android:password="false"
             android:text="Tirar Fotografia" />
 
