--- a/app/src/main/res/layout/single_medal.xml
+++ b/app/src/main/res/layout/single_medal.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="125dp"
-    android:layout_height="200dp">
+    android:layout_height="200dp"
+    android:layout_gravity="center_horizontal">
 
     <ImageView
         android:id="@+id/badgeImage"
