--- a/app/src/main/res/layout/activity_badge.xml
+++ b/app/src/main/res/layout/activity_badge.xml
@@ -27,7 +27,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView36" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout1"
+        android:id="@+id/header"
         android:layout_width="0dp"
         android:layout_height="90dp"
         android:background="#1D71B8"
@@ -86,7 +86,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView30"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1"
+        app:layout_constraintTop_toBottomOf="@+id/header"
         tools:srcCompat="@drawable/circlemedicinepill" />
 
     <TextView
