--- a/app/src/main/res/layout/activity_edit_medication.xml
+++ b/app/src/main/res/layout/activity_edit_medication.xml
@@ -8,7 +8,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header"
-        android:layout_width="411dp"
+        android:layout_width="0dp"
         android:layout_height="90dp"
         android:layout_marginBottom="47dp"
         android:background="#1D71B8"
@@ -17,43 +17,37 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/imageView10"
-            android:layout_width="65dp"
-            android:layout_height="65dp"
+        <TextView
+            android:id="@+id/txtTitle3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginLeft="12dp"
-            android:layout_marginTop="19dp"
-            android:layout_marginEnd="23dp"
-            android:layout_marginRight="23dp"
-            android:layout_marginBottom="19dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/txtDescription"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.461"
-            app:srcCompat="@drawable/arrow" />
-
-        <TextView
-            android:id="@+id/txtDescription"
-            android:layout_width="203dp"
-            android:layout_height="34dp"
-            android:layout_marginStart="84dp"
-            android:layout_marginLeft="84dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginEnd="118dp"
-            android:layout_marginRight="118dp"
-            android:layout_marginBottom="30dp"
+            android:layout_marginEnd="170dp"
+            android:layout_marginRight="170dp"
             android:text="Voltar"
             android:textColor="#FFFFFF"
             android:textSize="24sp"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/taken"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/taken3"
+            android:layout_width="0dp"
+            android:layout_height="65dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="250dp"
+            android:layout_marginRight="250dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.51"
+            app:srcCompat="@drawable/arrow" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
@@ -75,8 +69,8 @@
         android:id="@+id/editPosology"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="51dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="44dp"
         android:ems="10"
         android:hint="2"
         android:inputType="textPersonName"
@@ -121,33 +115,38 @@
         android:id="@+id/textView23"
         android:layout_width="77dp"
         android:layout_height="40dp"
-        android:layout_marginTop="111dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="180dp"
         android:layout_marginRight="180dp"
-        android:layout_marginBottom="93dp"
+        android:layout_marginBottom="44dp"
         android:text="horas."
         android:textColor="#000000"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/editMedDescription"
+        app:layout_constraintBottom_toTopOf="@+id/textView19"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/editPosology"
-        app:layout_constraintTop_toBottomOf="@+id/header" />
+        app:layout_constraintTop_toBottomOf="@+id/textView18" />
 
     <EditText
         android:id="@+id/editMedDescription"
-        android:layout_width="324dp"
+        android:layout_width="0dp"
         android:layout_height="64dp"
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="47dp"
         android:layout_marginRight="47dp"
+        android:layout_marginBottom="100dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="descricao"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/editMedSavebtn"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView19" />
 
     <Button
         android:id="@+id/editMedSavebtn"
