--- a/app/src/main/res/layout/activity_ler_etiqueta.xml
+++ b/app/src/main/res/layout/activity_ler_etiqueta.xml
@@ -9,15 +9,15 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header"
+        android:layout_width="0dp"
         android:layout_height="90dp"
         android:background="#1D71B8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="wrap_content">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/imageView10"
+            android:id="@+id/imageView5"
             android:layout_width="65dp"
             android:layout_height="65dp"
             android:layout_marginStart="12dp"
@@ -35,7 +35,7 @@
             app:srcCompat="@drawable/arrow" />
 
         <TextView
-            android:id="@+id/txtDescription"
+            android:id="@+id/txtDescription2"
             android:layout_width="203dp"
             android:layout_height="34dp"
             android:layout_marginStart="84dp"
@@ -50,7 +50,7 @@
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
