--- a/app/src/main/res/layout/activity_medication_catalog.xml
+++ b/app/src/main/res/layout/activity_medication_catalog.xml
@@ -8,7 +8,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header"
-        android:layout_width="415dp"
+        android:layout_width="0dp"
         android:layout_height="90dp"
         android:background="#1D71B8"
         app:layout_constraintEnd_toEndOf="parent"
@@ -16,29 +16,41 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/taken"
+            android:id="@+id/imageView17"
             android:layout_width="65dp"
             android:layout_height="65dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="19dp"
+            android:layout_marginEnd="23dp"
+            android:layout_marginRight="23dp"
+            android:layout_marginBottom="19dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/txtDescription"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.51"
+            app:layout_constraintVertical_bias="0.461"
             app:srcCompat="@drawable/arrow" />
 
         <TextView
-            android:id="@+id/txtTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginLeft="12dp"
+            android:id="@+id/txtDescription7"
+            android:layout_width="203dp"
+            android:layout_height="34dp"
+            android:layout_marginStart="84dp"
+            android:layout_marginLeft="84dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="118dp"
+            android:layout_marginRight="118dp"
+            android:layout_marginBottom="30dp"
             android:text="Voltar ao menu"
             android:textColor="#FFFFFF"
             android:textSize="24sp"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/taken"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -116,14 +128,4 @@
         tools:layout_editor_absoluteX="39dp"
         tools:layout_editor_absoluteY="105dp" />
 
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Medicação esporádica"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        android:textStyle="normal"
-        tools:layout_editor_absoluteX="39dp"
-        tools:layout_editor_absoluteY="386dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
