--- a/app/src/main/res/layout/activity_badge.xml
+++ b/app/src/main/res/layout/activity_badge.xml
@@ -21,6 +21,7 @@
         android:text="Fechar"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -99,7 +100,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="12dp"
         android:layout_marginRight="12dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="150dp"
         android:gravity="center_horizontal"
         android:text="Assiduidade exemplar! Tomou a sua medicação 15 dias seguidos sem falhar um dia! Tome mais cinco vezes sem falhar para o nível 4!"
         android:textColor="#000000"
