--- a/app/src/main/res/layout/activity_edit_medication.xml
+++ b/app/src/main/res/layout/activity_edit_medication.xml
@@ -10,44 +10,48 @@
         android:id="@+id/header"
         android:layout_width="0dp"
         android:layout_height="90dp"
-        android:layout_marginBottom="47dp"
         android:background="#1D71B8"
-        app:layout_constraintBottom_toTopOf="@+id/textView18"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/txtTitle3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:id="@+id/imageView23"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             android:layout_marginStart="12dp"
             android:layout_marginLeft="12dp"
-            android:layout_marginEnd="170dp"
-            android:layout_marginRight="170dp"
+            android:layout_marginTop="19dp"
+            android:layout_marginEnd="23dp"
+            android:layout_marginRight="23dp"
+            android:layout_marginBottom="19dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/txtDescription"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.461"
+            app:srcCompat="@drawable/arrow" />
+
+        <TextView
+            android:id="@+id/txtDescription13"
+            android:layout_width="203dp"
+            android:layout_height="34dp"
+            android:layout_marginStart="84dp"
+            android:layout_marginLeft="84dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="118dp"
+            android:layout_marginRight="118dp"
+            android:layout_marginBottom="30dp"
             android:text="Voltar"
             android:textColor="#FFFFFF"
             android:textSize="24sp"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/taken"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/taken3"
-            android:layout_width="0dp"
-            android:layout_height="65dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginEnd="250dp"
-            android:layout_marginRight="250dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.51"
-            app:srcCompat="@drawable/arrow" />
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
@@ -57,11 +61,9 @@
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="47dp"
-        android:layout_marginEnd="279dp"
-        android:layout_marginRight="279dp"
         android:text="Posologia"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/textView22"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/header" />
 
@@ -87,11 +89,8 @@
         android:layout_marginStart="41dp"
         android:layout_marginLeft="41dp"
         android:layout_marginTop="44dp"
-        android:layout_marginEnd="291dp"
-        android:layout_marginRight="291dp"
         android:text="Descrição"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView22" />
 
@@ -118,14 +117,11 @@
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="180dp"
-        android:layout_marginRight="180dp"
         android:layout_marginBottom="44dp"
         android:text="horas."
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView19"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/editPosology"
         app:layout_constraintTop_toBottomOf="@+id/textView18" />
 
@@ -153,8 +149,8 @@
         style="@style/Widget.AppCompat.Button"
         android:layout_width="195dp"
         android:layout_height="58dp"
-        android:layout_marginTop="95dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp"
         android:background="@drawable/btn_primaryblue"
         android:text="Guardar"
         android:textColor="#FFFFFF"
